Added controllers and error handling
